# CPE-4800

Labs/: .gitignore
Labs/lab_1/: CMakeLists.txt  lab_1.cpp  menu.cpp  menu.hpp  password_file.cpp  password_file.hpp  user_credentials.txt  user_credentials_plain.txt  user_input.cpp  user_input.hpp
Labs/lab_1/.cache/clangd/index/: lab_1.cpp.320006317B1BF346.idx  menu.cpp.96776C4F6FDA3F30.idx  menu.hpp.09CBF95A64CDB6CD.idx  password_file.cpp.1D6817A23927A48F.idx  password_file.hpp.9AE6A37DCF25ABB3.idx  user_input.cpp.D285AF7AB43AFF31.idx  user_input.hpp.DA3C38CAAE6BB2C3.idx
Labs/lab_2/: CMakeLists.txt  account_file.cpp  account_file.hpp  bank_service.cpp  bank_service.hpp  client.cpp  client.hpp  lab2_client.cpp  lab2_server.cpp  server.cpp  server.hpp
Labs/lab_2/tools/: evp.cpp  evp.hpp
Labs/lab_3/: CMakeLists.txt  client.cpp  client.hpp  evp.cpp  evp.hpp  generate_keys.sh  lab3_client.cpp  lab3_server.cpp  rsa_key_tools.cpp  rsa_key_tools.hpp  server.cpp  server.hpp  user_input.cpp  user_input.hpp
activites/2/: decrypted_message.txt  mac  mac.c  mac2.c  message.txt  p_tran_public_key.pem  private_key.pem  public_key.pem
activites/week_3/: alice_private_key.pem  alice_public_key.pem  bob_private_key.pem  bob_public_key.pem  decrypted_message.txt  decrypted_signature.partaa  decrypted_signature.sig  encrypted_signature.sig.partaa  encrypted_signature.sig.partab  example_pub_sig.sh  message.enc  message.sig.partab
hw2/: main_brute.py  main_prob.py
